--- a/sass/main.scss
+++ b/sass/main.scss
@@ -34,6 +34,7 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box.scss";
+@import "components/card";
 // layout folder
 @import "layout/grid";
 @import "layout/header";
