--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -84,6 +84,8 @@
     */
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
     &--1 {
       background-image: url(../img/nat-5.jpg),
         linear-gradient(
