Finished the "We make people genuinely happy" section
Started work on embedding a background video for the same section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,6 +35,7 @@
 @import "components/composition";
 @import "components/feature-box.scss";
 @import "components/card";
+@import "components/story";
 // layout folder
 @import "layout/grid";
 @import "layout/header";
