Added a new section to the page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,6 +36,7 @@
 @import "components/feature-box.scss";
 @import "components/card";
 @import "components/story";
+@import "components/bg-video";
 // layout folder
 @import "layout/grid";
 @import "layout/header";
