--- a/css/style.css
+++ b/css/style.css
@@ -484,7 +484,7 @@ body {
   */
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 1px;
   padding: 6rem;
   padding-left: 9rem;
@@ -525,6 +525,20 @@ body {
   .story:hover .story__img {
     transform: translateX(-4rem) scale(1);
     filter: blur(0.3rem) brightness(80%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.15; }
+  .bg-video__content {
+    height: 100%;
+    width: 100%;
+    -webkit-object-fit: cover;
+    object-fit: cover; }
 
 /**
     This will define all the grid like structures that will be used in the project
@@ -664,4 +678,4 @@ body {
 
 .section-stories {
   padding: 15rem 0;
-  background-color: #f7f7f7; }
+  position: relative; }
