--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -37,3 +37,6 @@ $gutter-horizontal: 6rem;
 
 // **************************** FONT SIZES **************************** //
 $default-font-size: 1.6rem;
+
+// **************************** BORDER RADIUS **************************** //
+$default-border-radius: 1.6rem;
