--- a/sass/main.scss
+++ b/sass/main.scss
@@ -37,6 +37,8 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/book";
+@import "components/form";
 // layout folder
 @import "layout/grid";
 @import "layout/header";
