--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -35,7 +35,7 @@ body {
   font-weight: 400;
   font-size: 16;
   line-height: 1.7;
-  color: $color-grey-dark;
+  color: $color-grey-dark-1;
   padding: 4rem;
 }
 
