--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -33,7 +33,7 @@
   }
   &--white {
     background-color: white;
-    color: $color-grey-dark;
+    color: $color-grey-dark-1;
     &::after {
       background-color: $color-white;
     }
