Finished a footer to the page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -42,5 +42,6 @@
 // layout folder
 @import "layout/grid";
 @import "layout/header";
+@import "layout/footer";
 // pages folder
 @import "pages/home";
