--- a/css/style.css
+++ b/css/style.css
@@ -798,6 +798,50 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: #eee; }
+  .footer__logo {
+    width: 15rem;
+    height: auto; }
+    .footer__logo-box {
+      text-align: center;
+      margin-bottom: 8rem; }
+  .footer__navigation {
+    border-top: 1px solid #eee;
+    padding-top: 2rem;
+    /**
+        inline block will not occupy 100% of the width. It will occupy the width that the content will need
+    */
+    display: inline-block; }
+  .footer__list {
+    list-style: none; }
+  .footer__item {
+    display: inline-block; }
+    .footer__item:not(:last-child) {
+      margin-right: 1.5rem; }
+  .footer__link:link, .footer__link:visited {
+    color: #eee;
+    background-color: #333;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all 0.2s;
+    padding: 0rem 0.5rem; }
+  .footer__link:hover, .footer__link:active {
+    color: #55c57a;
+    padding: 0rem 0.5rem;
+    border-radius: 1.6rem;
+    box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: scale(1.1); }
+  .footer__copyright {
+    border-top: 1px solid #eee;
+    padding-top: 2rem;
+    width: 80%;
+    float: right; }
+
 /**
     This file will contain the styles that are specific to the home page only
 */
