--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -102,7 +102,7 @@
 
 .btn-text {
   padding: 1rem;
-  padding-bottom: 0;
+  padding-bottom: 1rem;
   transition: all 0.2s;
   &:link,
   &:visited {
