Added a button (non working) to the top right of the page to bring up the navigation bar
Added styling to the list elements

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -43,5 +43,6 @@
 @import "layout/grid";
 @import "layout/header";
 @import "layout/footer";
+@import "layout/navigation";
 // pages folder
 @import "pages/home";
