--- a/css/style.css
+++ b/css/style.css
@@ -855,7 +855,8 @@ body {
   top: 6rem;
   right: 6rem;
   border-radius: 50%;
-  z-index: 2000; }
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1); }
 
 .navigation__background {
   height: 6rem;
@@ -866,15 +867,18 @@ body {
   top: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
-  transform: scale(100); }
+  transition: all 0.8s cubic-bezier(0.85, 0, 0.15, 1); }
 
 .navigation__nav {
   height: 100vh;
-  width: 100%;
+  width: 0;
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 1500; }
+  z-index: 1500;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6); }
 
 .navigation__list {
   position: absolute;
@@ -882,7 +886,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   list-style: none;
-  text-align: center; }
+  text-align: center;
+  width: 100%; }
 
 .navigation__item {
   margin: 2rem; }
@@ -910,18 +915,30 @@ body {
         background-size: Percentage => Stretches the image in the corresponding dimension to the specified percentage of the background positioning area.
       */
     background-size: 250%;
-    transition: all 0.4s; }
+    transition: all 0.3s; }
   .navigation__link span {
     margin-right: 1.5rem; }
-  .navigation__link:hover, .navigation__link:active {
+  .navigation__link:hover {
     /**
         https://developer.mozilla.org/en-US/docs/Web/CSS/background-position
         background-position: 100% => A value of 100% means that the right (or bottom) edge of the background image is aligned with the right (or bottom) edge of the container   
       */
     background-position: 100%;
     color: #28b485;
-    transform: translateX(1rem) scale(1.1);
-    border-radius: 1.6rem; }
+    border-radius: 1.6rem;
+    transform: translateY(-1rem) scale(1.1);
+    box-shadow: 0rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .navigation__link:active {
+    transform: translateY(-0.5rem) scale(1.1);
+    box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.1); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(100); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  width: 100%;
+  visibility: visible;
+  opacity: 1; }
 
 /**
     This file will contain the styles that are specific to the home page only
