--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -11,6 +11,7 @@
     right: 6rem;
     border-radius: 50%;
     z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba($color: $color-black, $alpha: 0.1);
   }
   &__background {
     height: 6rem;
@@ -25,16 +26,21 @@
       $color-primary-dark
     );
     z-index: 1000;
+    transition: all 0.8s cubic-bezier(0.85, 0, 0.15, 1);
 
-    transform: scale(100);
+    // transform: scale(100);
   }
   &__nav {
     height: 100vh;
-    width: 100%;
+    // width: 100%;
+    width: 0;
     position: fixed;
     top: 0;
     right: 0;
     z-index: 1500;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
   &__list {
     position: absolute;
@@ -43,6 +49,7 @@
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
+    width: 100%;
   }
   &__item {
     margin: 2rem;
@@ -80,7 +87,7 @@
         background-size: Percentage => Stretches the image in the corresponding dimension to the specified percentage of the background positioning area.
       */
       background-size: 250%;
-      transition: all 0.4s;
+      transition: all 0.3s;
     }
 
     /**
@@ -90,8 +97,7 @@
       margin-right: 1.5rem;
     }
 
-    &:hover,
-    &:active {
+    &:hover {
       /**
         https://developer.mozilla.org/en-US/docs/Web/CSS/background-position
         background-position: 100% => A value of 100% means that the right (or bottom) edge of the background image is aligned with the right (or bottom) edge of the container   
@@ -100,8 +106,24 @@
 
       //   transform: scale(10);
       color: $color-primary-dark;
-      transform: translateX(1rem) scale(1.1);
       border-radius: $default-border-radius;
+      transform: translateY(-1rem) scale(1.1);
+      box-shadow: 0rem 1rem 2rem rgba($color: $color-black, $alpha: 0.2);
     }
+
+    &:active {
+      transform: translateY(-0.5rem) scale(1.1);
+      box-shadow: 0rem 0.5rem 1rem rgba($color: $color-black, $alpha: 0.1);
+    }
+  }
+
+  &__checkbox:checked ~ &__background {
+    transform: scale(100);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    width: 100%;
+    visibility: visible;
+    opacity: 1;
   }
 }
