The navigation button is fully functional. The menu will not collapse upon selecting an option for now

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -197,4 +197,8 @@
     // transform: rotate(-180deg);
     transform: rotate(-135deg);
   }
+
+  //   &__button__invisible {
+  //     z-index: 3000;
+  //   }
 }
